# Hallo-Theo-Applied-AI-Hackathon

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
theo-copilot/: .env.example  README.md  docker-compose.theo.yml  pyproject.toml
theo-copilot/.streamlit/: config.toml
theo-copilot/agent/: enrichment_loop.py  enrichment_schema.py  prompts.py  trace.py
theo-copilot/agent/tools/: l1_wiki.py  l2_state.py  l3_memory.py  messaging.py  vendor.py
theo-copilot/app/: action_panel.py  db_sync.py  demo_controls.py  enrichment_cards.py  inbox.py  main.py  ticket_detail.py  timeline_viz.py  whatsapp_mockup.py
theo-copilot/bridges/whatsapp/: README.md  index.js  package.json  pair.html
theo-copilot/data/: seed.py
theo-copilot/data/hallotheo_demo/: 00_SZENARIO_BIBEL.md  NKA_2024_demir_WE3r.txt  mietvertrag_WE3r_demir_auszug.txt
theo-copilot/domain_wiki/: index.md
theo-copilot/domain_wiki/policies/: heating-emergency-de.md  mietminderung-handling-de.md
theo-copilot/domain_wiki/procedures/: nka-defense-de.md  vendor-anomaly-de.md
theo-copilot/domain_wiki/templates/: tenant-acknowledgment-de.md
theo-copilot/frontend/: .gitignore  next.config.js  package.json  tailwind.config.ts
theo-copilot/frontend/app/: globals.css  layout.tsx  page.tsx
theo-copilot/frontend/components/: action-panel.tsx  (+4 more)
theo-copilot/infra/: db.py  graphiti_client.py
theo-copilot/intake/: acknowledgement.py  api_routes.py  intake_service.py  intent_classifier.py  main.py
theo-copilot/scripts/: ingest_graphiti.py  kill_switch_cache.py  reset_demo_state.py  setup_voice_agent.py  verify_queries.py
(+24 files in other folders)
